--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 		
 		<div class="row green box2">
 			<div class="col-lg-12">
-				<p class="text_main1 text-white container h4"> Welcome to the 2021 Freshers' Issue! <br/> Here's a list of articles written specifically with freshers in mind – a guide to socialising, the struggles of being in our college, an interactive map of the campus, and more. Read on!</p>				
+				<p class="text_main1 text-white container h4"> Welcome to the 2021 Freshers' Issue! <br/> Here's a list of articles written specifically with freshers in mind – a guide to socialising, the struggles of being in our college, an interactive map of the campus, and more. Read on!</p>	
+				<p class="text_main1 text-white container"> To view last year's fresher's issue, <a href="http://freshers2020.pingiiit.org/">click here!</a></p>			
 				<img src="./img/struggle.svg" class="img2">
 			</div>
 		</div>
