Modified space above image for mobile view

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		</div>
 		
 		<div class="row green box2">
-			<div class="col-lg-12">
+			<div class="col-lg-12" id="space">
 				<p class="text_main1 text-white container h4"> Welcome to the 2021 Freshers' Issue! <br/> Here's a list of articles written specifically with freshers in mind – a guide to socialising, the struggles of being in our college, an interactive map of the campus, and more. Read on!</p>	
 				<p class="text_main1 text-white container"> To view last year's freshers' issue, <a href="http://freshers2020.pingiiit.org/">click here!</a></p>			
 				<img src="./img/struggle.svg" class="img2">
