--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		
 		<div class="row green box2">
 			<div class="col-lg-12">
-				<p class="text_main1 text-white container h4"> Welcome to the 2023 Freshers' Issue! <br/> Here's a list of articles written specifically with freshers in mind – a vindhya crossword, a review of the canteens, an interactive map of the campus, and more. Read on!</p>	
+				<p class="text_main1 text-white container h4"> Welcome to the 2023 Freshers' Issue! <br/> Here's a list of articles written specifically with freshers in mind – a review of the canteens, an interactive map of the campus, and more. Read on!</p>	
 				<p class="text_main1 text-white container"> To view 2021's freshers' issue, <a href="http://freshers2021.pingiiit.org/" style="color: yellow;">click here!</a></p>			
 			</div>
 		</div>
